--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,10 @@
     <h1>
       <a href="/">Just Tech News</a>
     </h1>
-    <nav>
+     <nav>
+      <button id="logout" class="btn-no-style">logout</button>
       <a href="/login">login</a>
-    </nav>
+    </nav> 
   </header>
     </header>
     <main>
@@ -27,7 +28,7 @@
       Thanks for visiting!
     </footer>
   </div>
-
+  <script src="/javascript/logout.js"></script>
 </body>
-
+  
 </html>
